luci-theme-bootstrap: fix incorrect wrap arounds in nested cbi sections
Fixes: #5743
(cherry picked from commit 8e09f1833b27e98208472ae44ff4b2ed218fa083)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -546,6 +546,7 @@ textarea {
 	color: var(--text-color-high);
 }
 
+.cbi-value > .cbi-section,
 .cbi-value > .cbi-tblsection {
 	width: 100%;
 }
